# hspec-cabal-watch

./: CHANGELOG.md  README.md  flake.nix  hie.yaml  hspec-cabal-watch.cabal  watch.cabal
app/: Main.hs
